--- a/style.css
+++ b/style.css
@@ -1,8 +1,92 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-body{
-font-family: sans-serif;
+body {
+  font-family: sans-serif;
+}
+/* Nav Bar  */
+.navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background: hsl(210, 10%, 23%);
+  color: hsl(210, 16%, 93%);
+  padding: 25px 60px;
+}
+/* Panier  */
+.cart{
+  position: relative;
+  background: #cecece;
+  color: hsl(210, 10%, 23%);
+  border-radius: 4px;
+  font-size: 30px;
+  padding: 5px;
+}
+
+.cartAmount{
+  position:absolute;
+  top: -15px;
+  right: -5px;
+  font-size: 16px;
+  background-color: red;
+  color: white;
+  padding: 3px;
+  border-radius: 3px;
+}
+
+/* Cart  */
+
+#shop{
+  display: grid;
+  grid-template-columns: repeat(4,223px);
+  margin-top: 3.5rem;
+  gap: 30px;
+  justify-content: center;
+  @media (max-width: 1000px){
+    grid-template-columns: repeat(2,223px);
+  }
+  @media (max-width: 560px){
+    grid-template-columns: repeat(1,223px);
+  }
+}
+.item{
+  border: 2px solid black;
+  border-radius: 4px;
+
+  img{
+    width: 100%;
+  }
+}
+.details{
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  gap: 10px;
+  
+  .price-quantity{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  
+    p{
+      font-weight: bold;
+      font-size: 22px;
+    }
+  }
+}
+.btn{
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  font-size: 16px;
+  align-items: center;
+
+  .bi-dash-lg{
+    color: red;
+  }
+  .bi-plus-lg{
+    color: green;
+  }
 }
