--- a/src/style.css
+++ b/src/style.css
@@ -5,9 +5,20 @@
 }
 body {
   font-family: sans-serif;
+  cursor: default;
 }
 i{
   cursor: pointer
+}
+.bi-cart4{
+  color: hsl(210, 10%, 23%);;
+}
+a{
+  text-decoration: none;
+  color: hsl(210, 16%, 93%);
+}
+h1{
+  color: hsl(210, 16%, 93%);
 }
 /* Nav Bar  */
 .navbar {
@@ -92,4 +103,21 @@ i{
   .bi-plus-lg{
     color: green;
   }
+}
+
+#label{
+  text-align: center;
+  margin-bottom: 20px;
+  h2{
+    margin-top: 20px;
+  }
+}
+.homeBtn{
+  background: hsl(210, 10%, 23%);
+  color: hsl(210, 16%, 93%);
+  border: none;
+  padding: 6px;
+  border-radius: 3px;
+  cursor: pointer;
+  margin-top: 16px;
 }
